@@ -376,6 +376,10 @@ Base class for warnings generated by user code.
 Base class for warnings about deprecated features.
 \end{excdesc}
 
+\begin{excdesc}{PendingDeprecationWarning}
+Base class for warnings about features which will be deprecated in the future.
+\end{excdesc}
+
 \begin{excdesc}{SyntaxWarning}
 Base class for warnings about dubious syntax
 \end{excdesc}
@@ -423,6 +427,7 @@ The class hierarchy for built-in exceptions is:
      +---Warning
 	  +-- UserWarning
 	  +-- DeprecationWarning
+	  +-- PendingDeprecationWarning
 	  +-- SyntaxWarning
 	  +-- OverflowWarning
 	  +-- RuntimeWarning
