@@ -342,6 +342,15 @@ strings \samp{True} and \samp{False} instead of \samp{1} and \samp{0}.
 %\end{itemize}
 
 
+%\begin{PendingDeprecationWarning}
+A new warning PendingDeprecationWarning was added to provide
+direction on features which are in the process of being deprecated.
+The warning will not be printed by default.  To see the pending
+deprecations, use -Walways::PendingDeprecationWarning:: on the command line
+or warnings.filterwarnings().
+%\end{PendingDeprecationWarning}
+
+
 %======================================================================
 \section{Specialized Object Allocator (pymalloc)\label{section-pymalloc}}
 
